syntax = "proto2";
package bundle;

message Bundle {
    required string entry_point = 1;
    // File path name and file content 
    repeated File files = 2;
}

message File {
    required string revision_id = 1;
    required string file_name = 2;
    required string file_path = 3;
    required bytes content = 5;
}